<resources>
    <string name="app_name">Travel Guide</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_profile">Profile</string>
    <string name="action_done">Done</string>
    <string name="label_login_with_facebook">Login with Facebook</string>
    <string name="place">Place</string>
    <string name="label_logout">Logout</string>
    <string name="new_trip">New Trip</string>
    <string name="hint_destination">Destination</string>
    <string name="hint_plan_name">Name</string>
    <string name="label_Start_Date">Date</string>
    <string name="label_End_Date">Date</string>
    <string name="label_save">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_place_name">Name</string>
    <string name="hint_travel_time">Time spent</string>
    <string name="plan_name_is_required">Plan name is required!</string>
    <string name="destination_is_required">Destination is required!</string>
    <string name="plan_start_date_is_required">Plan start date is required!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="couple">Couple</string>
    <string name="family">Family</string>
    <string name="group">Group</string>
    <string name="creating_plan">Creating Plan…</string>
    <string name="loading_plans">Loading Plans…</string>
    <string name="please_wait">Please wait.</string>
    <string name="no_data_available">No data available.</string>
    <string name="label_settings">Select filters</string>
    <string name="label_group_type">Group</string>
    <string name="label_season">Season</string>
    <string name="label_save_button">Save</string>
    <string name="label_cancel_button">@android:string/cancel</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="add_new_place">Add New Place</string>
    <string name="add_new_day">Add New Day</string>
    <string name="login_header">Log in and start customizing your trips for the best experience!</string>
    <string name="termsAndPrivacy">By logging in you agree to the TravelGuide Terms of Service and Privacy Policy.</string>
    <string name="log_in_facebook">Log In With Facebook</string>
    <string name="logging_in">Logging in…</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="single">Single</string>
</resources>
