<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="500dp"
    android:layout_height="600dp"
    android:weightSum="1">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_PlaceName"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_place_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_TravelTime"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_travel_time"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.12">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/label_save"
            android:id="@+id/savebutton"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="50dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/label_cancel"
            android:id="@+id/cancelbutton"
            android:layout_marginRight="10dp"
            android:onClick="closeitem"
            />
    </LinearLayout>

</LinearLayout>