<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.travelguide.activities.NewTavelPlanActivity">
    <TextView
        android:id="@+id/tv_NewPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_trip"
        android:textSize="40sp"
        android:textStyle="normal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/tv_PlanName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_plan_name"
        android:singleLine="true"
        android:layout_below="@+id/tv_NewPlan"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/et_PlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_destination"
        android:singleLine="true"
        android:layout_below="@+id/tv_PlanName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/tv_PlanName"
        android:layout_alignEnd="@+id/tv_PlanName" />
    <TextView
        android:id="@+id/tv_StartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_Start_Date"
        android:singleLine="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tv_EndDate"
        android:layout_alignTop="@+id/tv_EndDate" />
    <TextView
        android:id="@+id/tv_EndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="11dp"
        android:hint="@string/label_End_Date"
        android:singleLine="true"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/et_PlaceName"
        android:layout_alignEnd="@+id/et_PlaceName" />
    <Button
        android:id="@+id/btn_Male"
        style="@style/Button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_male"
        android:paddingRight="10dp"
        android:layout_alignLeft="@+id/tv_StartDate"
        android:layout_alignStart="@+id/tv_StartDate"
        android:layout_alignTop="@+id/btn_Couple" />

    <Button
        android:id="@+id/btn_Couple"
        style="@style/Button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn_CreatePlan"
        android:layout_alignEnd="@+id/tv_NewPlan"
        android:layout_alignRight="@+id/tv_NewPlan"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/ic_couple"
        android:paddingRight="10dp" />
    <Button
        android:id="@+id/btn_Family"
        style="@style/Button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_family"
        android:paddingRight="10dp"
        android:layout_above="@+id/btn_CreatePlan"
        android:layout_alignLeft="@+id/btn_CreatePlan"
        android:layout_alignStart="@+id/btn_CreatePlan" />
    <Button
        android:id="@+id/btn_CreatePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_create_plan"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tv_EndDate"
        android:layout_toStartOf="@+id/tv_EndDate"
        android:layout_marginBottom="32dp" />

    <Button
        style="@style/Button"
        android:id="@+id/btn_Female"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_female"
        android:paddingRight="10dp"
        android:layout_above="@+id/btn_CreatePlan"
        android:layout_alignRight="@+id/tv_EndDate"
        android:layout_alignEnd="@+id/tv_EndDate" />
</RelativeLayout>
